maintainIT2/src/objects/WO_Labor__c.object
<CustomObject>
    <description>WO Task/WO Labor defines the type and qty of a Trade needed to perform a work order.</description>
    <fields>
        <fullName>Actual_OT_Labor_Cost__c</fullName>
        <description>Actual Overtime Labor Cost</description>
        <inlineHelpText>Actual Overtime Labor Cost</inlineHelpText>
        <label>Actual OT Labor Cost</label>
        <summarizedField>WO_Task_Labor__c.Actual_Labor_Cost_Overtime__c</summarizedField>
        <summaryForeignKey>WO_Task_Labor__c.WO_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_OT_Labor_Hours__c</fullName>
        <description>Actual Overtime Labor Hours</description>
        <inlineHelpText>Actual Overtime Labor Hours</inlineHelpText>
        <label>Actual OT Labor Hours</label>
        <summarizedField>WO_Task_Labor__c.Overtime_Hours__c</summarizedField>
        <summaryForeignKey>WO_Task_Labor__c.WO_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Reg_Labor_Cost__c</fullName>
        <description>Actual Regular Labor Cost</description>
        <inlineHelpText>Actual Regular Labor Cost</inlineHelpText>
        <label>Actual Reg Labor Cost</label>
        <summarizedField>WO_Task_Labor__c.Actual_Labor_Cost_Regular__c</summarizedField>
        <summaryForeignKey>WO_Task_Labor__c.WO_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Reg_Labor_Hours__c</fullName>
        <description>Actual Regular Labor Hours summarized from Work Order Task Labor</description>
        <inlineHelpText>Actual Regular Labor Hours summarized from Work Order Task Labor</inlineHelpText>
        <label>Actual Reg Labor Hours</label>
        <summarizedField>WO_Task_Labor__c.Regular_Hours__c</summarizedField>
        <summaryForeignKey>WO_Task_Labor__c.WO_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Assigned_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Accounts Object with optional filter of Vendor = True</description>
        <inlineHelpText>Lookup to the Accounts Object with optional filter of Vendor = True</inlineHelpText>
        <label>Assigned Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Account list filtered for Vendor = True</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>WO_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Work Order Task Assignee - Lookup to User Object.  Use this assignment field when the work order resources are system users (have User ID&apos;s).</description>
        <inlineHelpText>Work Order Task Assignee - Lookup to User Object.  Use this assignment field when the work order resources are system users (have User ID&apos;s).</inlineHelpText>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Order_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Work Order Task Description</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Craft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Planned Craft for the Work Order Task</description>
        <inlineHelpText>Planned Craft for the Work Order Task</inlineHelpText>
        <label>Craft</label>
        <referenceTo>Craft__c</referenceTo>
        <relationshipName>WO_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Est_Hrs_at_Completion__c</fullName>
        <description>Estimated Hours at Completion is based on the Total Actual Hours + Estimated Hrs to Completion</description>
        <formula>Total_Actual_Labor_Hours__c + Est_Hrs_to_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimated Hours at Completion is based on the Total Actual Hours + Estimated Hrs to Completion</inlineHelpText>
        <label>Est Hrs at Completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Hrs_to_Complete__c</fullName>
        <description>Estimated Hours to Complete the Work Order Task</description>
        <formula>Planned_Hours__c * ( 1 - Percent_Complete__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Estimated Hours to Complete the Work Order Task (derived from the remaining % and the planned hours)</inlineHelpText>
        <label>Est Hrs to Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <description>Work Order Task Detailed Instructions</description>
        <inlineHelpText>Work Order Task Detailed Instructions</inlineHelpText>
        <label>Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>People_Required__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Total # of persons of this craft type for the this task that is required to safely and effectively complete the job.</description>
        <inlineHelpText>Total # of persons of this craft type for the this task that is required to safely and effectively complete the job.  Does not affect the Planned Hours or Remaining Hours.</inlineHelpText>
        <label># People Required</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Percentage Completion for this specific WO Task.  Used to calculate estimated hours to complete for each task. - User Specified.</description>
        <inlineHelpText>Percentage Completion for this specific WO Task.  Used to calculate estimated hours to complete for each task. - User Specified.</inlineHelpText>
        <label>Percent Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Planned_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Planned Labor Hours for this Work Order Task</description>
        <inlineHelpText>Total Planned Labor Hours for this Work Order Task</inlineHelpText>
        <label>Planned Hrs</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Hrs_Remaining__c</fullName>
        <description>Planned Hours - Total Actual Hours</description>
        <formula>IF( Planned_Hours__c  &gt;  Total_Actual_Labor_Hours__c , Planned_Hours__c  -  Total_Actual_Labor_Hours__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Planned Hours - Total Actual Hours</inlineHelpText>
        <label>Planned Hrs Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Labor_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Planned Labor Cost = Planned Hours * Craft Labor Rate.  System populated and updated each time the Planned Hrs or Craft is changed.  If a Craft is not specified, default value comes from Custom Setting.  Field security should be set to read only for all profiles.</description>
        <inlineHelpText>Planned Labor Cost = Planned Hours * Craft Labor Rate.  If a Craft is not specified, default value comes from Custom Setting.  System populated via Workflow.  Field security should be set to read only for all profiles.</inlineHelpText>
        <label>Planned Labor Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resource_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Resource Assigned field is a Lookup relationship to the Contact Object using a filter with &quot;Work Order Resource = True&quot;.  Use this assignee if the work order resources are NOT system users.</description>
        <inlineHelpText>The Resource Assigned field is a Lookup relationship to the Contact Object using a filter with &quot;Work Order Resource = True&quot;.  Use this assignee if the work order resources are NOT system users.</inlineHelpText>
        <label>Assigned Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Work_Order_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>The selected contact must have the &quot;work order resource&quot; checkbox set to &quot;True&quot;</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>WO_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Date__c</fullName>
        <description>Work Order Task Schedule Date</description>
        <inlineHelpText>Work Order Task Scheduled Date</inlineHelpText>
        <label>Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Std_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Standard Task (from Work Order Standard Task Library)</description>
        <inlineHelpText>Standard Task (from Work Order Standard Task Library)</inlineHelpText>
        <label>Std Task</label>
        <referenceTo>WO_Std_Task__c</referenceTo>
        <relationshipName>WO_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <description>Work Order Step - Used to Sequence the tasks</description>
        <label>Step</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Due_Date__c</fullName>
        <description>Work Order Task Due Date</description>
        <inlineHelpText>Work Order Task Due Date</inlineHelpText>
        <label>Task Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Labor_Cost__c</fullName>
        <description>Total Work Order Task Actual Labor Cost</description>
        <formula>Actual_Reg_Labor_Cost__c  +  Actual_OT_Labor_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Work Order Task Actual Labor Cost</inlineHelpText>
        <label>Total Actual Labor Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Labor_Hours__c</fullName>
        <description>Total Actual Labor Hours</description>
        <formula>Actual_Reg_Labor_Hours__c  +  Actual_OT_Labor_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Actual Labor Hours</inlineHelpText>
        <label>Total Actual Labor Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WOT_User_Picklist_1__c</fullName>
        <description>The Work Order Task User Picklist 1 field is a user definable field which is copied in the custom deep clone process.</description>
        <inlineHelpText>The Work Order Task User Picklist 1 field is a user definable field which is copied in the custom deep clone process.</inlineHelpText>
        <label>WOT User Picklist 1</label>
        <picklist>
            <picklistValues>
                <fullName>Value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WOT_User_Text_1__c</fullName>
        <description>The Work Order Task User Text 1 field is a user definable field which is copied in the custom deep clone process.</description>
        <inlineHelpText>The Work Order Task User Text 1 field is a user definable field which is copied in the custom deep clone process.</inlineHelpText>
        <label>WOT User Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WO_Description__c</fullName>
        <description>Work Order Description</description>
        <formula>Work_Order__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WO Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WO_Due_Date__c</fullName>
        <description>Work Order Due Date</description>
        <formula>Work_Order__r.Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Work Order Due Date</inlineHelpText>
        <label>WO Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WO_Status__c</fullName>
        <formula>TEXT( Work_Order__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WO Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Record_Type__c</fullName>
        <description>Work Order Record Type</description>
        <formula>TEXT(Work_Order__r.Work_Order_Record_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Work Order Record Type</inlineHelpText>
        <label>Work Order Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipName>Work_Order_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>WO Labor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Work_Order__c</columns>
        <columns>WO_Status__c</columns>
        <columns>NAME</columns>
        <columns>Step__c</columns>
        <columns>Assignment__c</columns>
        <columns>Planned_Hours__c</columns>
        <columns>Percent_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WOL-{00000000}</displayFormat>
        <label>WO Labor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WO Labors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Num_People_NonNegative</fullName>
        <active>true</active>
        <description>Esures that the Number of People identified on a Work Order Task non-negative value</description>
        <errorConditionFormula>People_Required__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>People_Required__c</errorDisplayField>
        <errorMessage>The # of People on a work order task must be greater than or equal to zero (0)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Plan_Hours_NonNegative</fullName>
        <active>true</active>
        <description>Ensures that the Plan Hours on a Work Order Task is a non-negative value</description>
        <errorConditionFormula>Planned_Hours__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Planned_Hours__c</errorDisplayField>
        <errorMessage>The Plan Hrs must be greater than or equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WO_TaskPercentage_Completion</fullName>
        <active>true</active>
        <description>Constrains the % completion to be a non-negative value between 0 and 100</description>
        <errorConditionFormula>Percent_Complete__c &gt; 1 ||  Percent_Complete__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Percent_Complete__c</errorDisplayField>
        <errorMessage>The Percentage Completion must be between 0 and 100</errorMessage>
    </validationRules>
</CustomObject>